--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -1,11 +1,12 @@
-<div class="flex-container-big">
-  <div class="flex-block-big">
+<!-- <div class="flex-container-big">
+  <div class="flex-block-big"> -->
 
     <div class="blue-bar">
-      <div class="h2-white">Departments - Index</div>
+      <div class="h2-white">Departments</div>
     </div>
 
-    <br><br><br><br>
+
+    <div class="col-sm-12"><br>
     <%= link_to "New Department", new_department_path, :class => "btn btn-sm btn-primary" %>
     <%= link_to 'Assign Person', new_position_path, :class => "btn btn-sm btn-warning" %>
 
@@ -71,5 +72,8 @@
     <h3 class="h2-white pull-left">No Departments Yet</h3>
     <% end %>
 
-  </div>
-</div>
+            </div>
+
+
+  <!-- </div>
+</div> -->
