--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -5,7 +5,7 @@
       <div class="col-sm-5">
 
         <div class="h2-white">Department - Show</div>
-        <br><%= link_to 'Back', departments_path %>
+        <br><%= link_to 'Back', :back %>
         <br>
 
         <h3><%= @department.name %>
