--- a/app/views/parts/edit.html.erb
+++ b/app/views/parts/edit.html.erb
@@ -1,10 +1,14 @@
+  <div class="row">
+    <div class="col-sm-12">
 
+      <div class="form">
+        <div class="h2-white pull-left">Part - Person - Edit</div><br><br><br>
+        <p class="white">First and Last Name must be filled in.</p>
+        <%= link_to 'Back', unit_path(@unit) %><br><br>
+        <%= render 'form' %>
+      </div>
 
-    <div class="h2-white pull-left">Part - Person - Edit</div><br><br>
-
-    <h4 class="pull-left">First and Last Name must be filled in.</h4>
-    <br>
-    <br>
-    <%= render "form" %>
     </div>
+    <!-- col end -->
   </div>
+  <!--row end -->
