--- a/app/views/positions/edit.html.erb
+++ b/app/views/positions/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing position</h1>
+<div class="row">
+  <div class="col-sm-12">
 
-<%= render 'form' %>
+    <div class="form">
+      <div class="h2-white pull-left">Editing Position</div><br><br><br>
+      <%= link_to 'Back', departments_path %><br><br>
+      <%= render 'form' %>
+    </div>
 
-<%= link_to 'Show', @position %> |
-<%= link_to 'Back', positions_path %>
+  </div>
+  <!-- col end -->
+</div>
+<!--row end -->
