--- a/app/views/revents/show.html.erb
+++ b/app/views/revents/show.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-sm-5">
         <div class="h2-white">Revent - Show</div>
-        <br><%= link_to 'Back', revents_path %>
+        <br><%= link_to 'Back', :back %>
         <br>
 
         <h3><%= @revent.name %></h3>
