--- a/app/views/spectators/new.html.erb
+++ b/app/views/spectators/new.html.erb
@@ -3,7 +3,7 @@
 
     <div class="form">
       <div class="h2-white pull-left">New Spectator</div><br><br><br>
-      <%= link_to 'Back', revents_path %><br><br>
+      <%= link_to 'Back', :back %><br><br>
       <%= render 'form' %>
     </div>
 
