--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,52 +1,66 @@
-<div class="space center">
+<div class="row">
+  <div class="col-sm-12">
 
-    <h2 class="pull-left">Edit <%= resource_name.to_s.humanize %></h2><br><br><br>
+    <div class="form">
 
-    <div class="well">
+      <h3 class="pull-left">Edit
+        <%= resource_name.to_s.humanize %></h3><br><br><br>
 
+      <%= link_to "Back", :back  %><br><br>
 
+      <div class="well">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+        <div class="field">
+          <%= f.label :email %><br/>
+          <%= f.email_field :email, autofocus: true, :class => 'form-control input-lg' %>
+        </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for:
+          <%= resource.unconfirmed_email %></div>
+        <% end %>
+
+        <div class="field">
+          <%= f.label :password %>
+          <i class="font-light">(leave blank if you don't want to change it)</i>
+
+          <br/>
+          <%= f.password_field :password, autocomplete: "off", :class => 'form-control input-lg' %>
+          <% if @minimum_password_length %>
+          <br/>
+          <em><%= @minimum_password_length %>
+            characters minimum</em>
+          <% end %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation %><br/>
+          <%= f.password_field :password_confirmation, autocomplete: "off", :class => 'form-control input-lg' %>
+        </div>
+
+        <div class="field">
+          <%= f.label :current_password %>
+          <i class="font-light">(we need your current password to confirm your changes)</i><br/>
+          <%= f.password_field :current_password, autocomplete: "off", :class => 'form-control input-lg' %>
+        </div>
+
+        <div class="actions center">
+          <%= f.submit "Update Password", :class => "btn btn-primary" %>
+        </div>
+        <% end %>
+
+      </div>
+
+      <h3>Close Account</h3>
+      <div class="well">
+        <div class="center">
+          Here you can close your account permanently
+          <br><br>
+          <%= button_to "Cancel my Account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class => "btn-sm btn-danger" %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update", :class => "btn btn-primary" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
-
-</div>
 </div>
