--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,16 +54,18 @@
         <div class="topbar">
           <span class="pull-left shift-down grey"><%= flash[:notice] %><%= flash[:errors] %></span>
           <div class="login pull-right">
+
             <% if current_user %>
             <li>
               <span class="blue">
                 <%= link_to current_user.email, edit_user_registration_path %>
                 |
                 <%= link_to "Log-out", destroy_user_session_path, method: "delete" %>
-                <%= image_tag("settings.png", :class => "icon-size")%></li>
+                <%= link_to image_tag("settings.png", :class => "nav-icon-size"), edit_user_registration_path %>
+                <%#= image_tag("settings.png", :class => "icon-size")%></li>
             <% else %>
               <li><%= link_to "Login", new_user_session_path %></a>
-              <%= image_tag("settings.png", :class => "icon-size")%></li>
+              <%= link_to image_tag("settings.png", :class => "nav-icon-size"), edit_user_registration_path %>
             <% end %>
           </div>
         </div>
