--- a/app/views/spectators/edit.html.erb
+++ b/app/views/spectators/edit.html.erb
@@ -1,6 +1,13 @@
-<h1>Editing Spectator</h1>
+<div class="row">
+  <div class="col-sm-12">
 
-<%= render 'form' %>
+    <div class="form">
+      <div class="h2-white pull-left">Editing Spectator</div><br><br><br>
+      <%= link_to 'Back', revents_path %><br><br>
+      <%= render 'form' %>
+    </div>
 
-<%= link_to 'Show', @spectator %> |
-<%= link_to 'Back', spectators_path %>
+  </div>
+  <!-- col end -->
+</div>
+<!--row end -->
