--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -1,11 +1,13 @@
 <!-- <div class="flex-container-big">
   <div class="flex-block-big">
     <div class="row"> -->
+
+    <div class="blue-bar">
+      <div class="h2-white">Statistics</div>
+    </div>
+
       <div class="col-sm-12">
         <br>
-        <div class="h2-white">Statistics</div>
-        <br>
-
         <div class="big-white-box ">
           <div class="col-sm-3">
             <div class="stat-title"><%= @current_year %></div>
