--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -1,10 +1,11 @@
-<div class="flex-container-big">
-  <div class="flex-block-big">
-    <div class="row">
-      <div class="col-sm-5">
+<!-- <div class="flex-container-big">
+  <div class="flex-block-big"> -->
+
         <div class="blue-bar">
-        <div class="h2-white">Units - Families - Index</div>
+          <div class="h2-white">Families</div><br>
         </div>
+
+        <div class="col-sm-5">
         <br><br>
         <%= link_to "New Family", new_unit_path, :class => "btn btn-sm btn-primary" %>
         <br><br>
@@ -72,12 +73,8 @@
         <% end %>
         <!-- of SearchResults end -->
 
-      </div>
-      <!-- col end -->
-    </div>
-    <!--row end -->
-
-  </div>
+      </div><!-- col end -->
+  <!-- </div> -->
   <!-- flex-block end -->
-</div>
+<!-- </div> -->
 <!-- flex-container end -->
