Media Query for login

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,21 +1,25 @@
 <!-- <div class="flex-container-big">
   <div class="flex-block-big"> -->
 
+  <div class="blue-bar">
+    <div class="h2-white">Dashboard</div><br>
+  </div>
+
   <div class="col-sm-12">
   <br><br>
-  <div class="h2-white pull-left">Summary</div><br><br><br>
+  <div class="h3-white pull-left">Summary</div><br><br><br>
     <p>Momentum is a software that allows non profit organizations or social movements to organize their internal structure. The development has been broken into phases with the first one below.</p>
     <br>
-    <div class="edit_family btn btn-sm btn-primary h2-white">User Stories for Phase 1</div>
+    <div class="edit_family btn btn-sm btn-primary h3-white">User Stories for Phase 1</div>
        <div class="edit_f"><br><br>
-      <div class="h2-white pull-left">User Stories for Phase 1</div><br><br><br>
+      <div class="h3-white pull-left">Implemented</div><br><br><br>
         <p>Admin - store families and people that belong to those families</p>
         <p>Admin - store departments and assign people to those departments</p>
         <p>Admin - store events and check people into those events</p>
         <p>Admin - view basic statistics total users, families, people, and track attendance and movement growth over time</p>
         <p>User - create an account</p><br><br>
 
-      <div class="h2-white pull-left">Still to do</div><br><br><br>
+      <div class="h3-white pull-left">Still to do</div><br><br><br>
         <br><p>------ General ------</p>
         <p>Admin - View Stats - Needs Refining</p>
         <p>Admin - View Dashboard with upcoming events</p>
