--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -254,7 +254,7 @@ h6 {
 }
 .logo-box {
   // background-color: $black;
-  padding: 10px 0px;
+  padding: 10px 0px 10px 0px;
   width: 250px;
   height: 70px;
   float: left;
@@ -1100,11 +1100,22 @@ li.selected {
     margin-left: 65px;
 }
 
-// /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-// @media screen and (max-height: 450px) {
-//     .sidenav {padding-top: 15px;}
-//     .sidenav a {font-size: 18px;}
-// }
+//Login Details
+@media screen and (min-width: 0px) and (max-width: 400px) {
+  .login-mobile { display: block; }  /* show it on small screens */
+}
+@media screen and (min-width: 401px){
+  .login-mobile { display: none; }
+}
+@media screen and (min-width: 0px) and (max-width: 700px) {
+  .login-desktop { display: none; }  /* show it on small screens */
+}
+@media screen and (min-width: 601px){
+  .login-desktop { display: block; }   /* hide it elsewhere */
+}
+
+
+
 #icon-menu {
   width: 65px;
   background-color: #111;
