--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -44,7 +44,7 @@
         <% end %>
         <% if @searchResults %>
         <% for unit in @searchResults %>
-        <div class="center midnight-bg">
+        <div class="search-results center midnight-bg">
           <%= link_to "#{unit.familyname}", unit_path(unit), :class => "family-card-search btn tiny-margin" %><br>
         </div>
         <% end %>
@@ -66,7 +66,7 @@
         <% end %>
         <% if @searchResultsPeople %>
         <% for part in @searchResultsPeople %>
-        <div class="center midnight-bg">
+        <div class="people-box-search center midnight-bg">
           <%= link_to "#{part.firstname} #{part.lastname}", unit_path(part.unit_id), :class => "family-card-search btn tiny-margin" %><br>
         </div>
         <% end %>
