added fade to flash notices

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,9 +86,8 @@
 
 
         </div>
-
         <div class="">
-          <span class="pull-left shift-down grey"><%= flash[:notice] %><%= flash[:errors] %></span>
+          <span class="grey shift-right" id="flash"><%= flash[:notice] %><%= flash[:errors] %></span>
           <%= yield %>
         </div>
 
