--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,8 +87,8 @@
 
         </div>
         <div class="">
-          <span class="grey shift-right" id="flash"><%= flash[:notice] %><%= flash[:errors] %></span>
           <%= yield %>
+          <span class="grey shift-right flash" id="flash"><%= flash[:notice] %><%= flash[:errors] %></span>
         </div>
 
       </div> <!-- right-col end -->
