--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -2,11 +2,12 @@
   <div class="flex-block-big"> -->
 
     <div class="blue-bar">
-      <div class="h2-white">Departments</div>
+      <div class="h2-white">Departments - Serving Admin</div>
     </div>
 
 
     <div class="col-sm-12"><br>
+
     <%= link_to "New Department", new_department_path, :class => "btn btn-sm btn-primary" %>
     <%= link_to 'Assign Person', new_position_path, :class => "btn btn-sm btn-warning" %>
 
@@ -14,8 +15,9 @@
     <br>
     <% if @departments.any? %>
     <% @departments.each do |dep| %>
-    <div class="col-xs-3">
-      <div class="well2">
+    <div class="white-box-dep col-sm-1">
+      <div class="people-box-header">
+
 
         <%= link_to "#{dep.name}", department_path(dep), :class => "h2-black" %>
         <!-- Javascript form toggle -->
@@ -30,9 +32,10 @@
           </div>
           <% end %>
         </div>
-
+      </div> <!-- people header end -->
         <%#= link_to "Edit",  edit_department_path(dep, @dep_id = dep.id), :class => "pull-right" %>
         <%#= link_to 'Add Person', new_position_path, :class => "btn custom-btn btn-primary" %>
+
 
         <div class="people-box2">
           <% @positions.each do |position| %>
@@ -51,22 +54,19 @@
               <% if position.position2 === "Department Head" %>
               <%= image_tag("dep_head2.png", :class => "icon-size-tiny")%>
               <% end %>
+              <%= position.need %>
             </span>
 
             <span class="black2">
               <%= link_to "X", position, :class => "", :id => "delete-test", :data => {:confirm => "Are you sure?",:method => "delete"}%>
             </span>
           </div>
+          <% end %><!-- filter end -->
           <% end %>
-          <% end %>
-          <!-- Filter end -->
-        </div>
-        <!-- people-box2 end -->
 
-      </div>
-      <!-- well2 end -->
-    </div>
-    <!-- col2 end -->
+        </div><!-- people-box2 end -->
+    </div><!-- col-sm-1 end -->
+
     <% end %>
   <% else %>
     <h3 class="h2-white pull-left">No Departments Yet</h3>
