--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -2,7 +2,7 @@
   <div class="flex-block-big"> -->
 
         <div class="blue-bar">
-          <div class="h2-white">Families</div><br>
+          <div class="h2-white">Families</div>
         </div>
 
         <div class="col-sm-5">
