--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div class="flex-block-big"> -->
 
   <div class="blue-bar">
-    <div class="h2-white">Dashboard</div><br>
+    <div class="h2-white">Dashboard</div>
   </div>
 
   <div class="col-sm-12">
