--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
     <div class="well2">
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <%= devise_error_messages! %><br>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -22,6 +22,7 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
+
 
   <div class="actions">
     <%= f.submit "Sign up", :class => "btn btn-primary" %>
