--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,12 @@
       <%= link_to image_tag("home.png", :class => "nav-icon-size"), root_path %>
       <%= link_to image_tag("people.png", :class => "nav-icon-size"), units_path %>
       <%= link_to image_tag("serve.png", :class => "nav-icon-size"), serve_path %>
-      <%= link_to image_tag("stats.png", :class => "nav-icon-size"), stats_path %>
       <%= link_to image_tag("checkin.png", :class => "nav-icon-size"), checkins_path %>
-      <%= link_to image_tag("event.png", :class => "nav-icon-size"), revents_path %>
-      <%= link_to image_tag("departments.png", :class => "nav-icon-size"), departments_path %>
+      <% if can? :manage, :all%>
+        <%= link_to image_tag("stats.png", :class => "nav-icon-size"), stats_path %>
+        <%= link_to image_tag("event.png", :class => "nav-icon-size"), revents_path %>
+        <%= link_to image_tag("departments.png", :class => "nav-icon-size"), departments_path %>
+      <% end %>
 
       </div>
       <div id="mySidenav" class="sidenav center">
@@ -29,11 +31,13 @@
         <li class="close-menu" onclick="closeNav()"><%= link_to "Menu", root_path, :class => 'notWorking' %></li>
         <li class="<%= 'active_bg' if current_page?(root_path) %>"><%= link_to "Home", root_path, :class => 'notWorking' %></li>
         <li class="<%= 'active_bg' if current_page?(units_path) %>"><%= link_to "People", units_path, :class => 'notWorking' %></li>
-        <li><%= link_to "Serve", serve_path, :class => 'notWorking' %></li>
-        <li><%= link_to "Stats", stats_path, :class => 'notWorking' %></li>
-        <li class="NA"><%= link_to "Event Check-in", checkins_path, :class => 'notWorking' %></li>
-        <li class="<%= 'active_bg' if current_page?(revents_path) %>"><%= link_to "Events", revents_path, :class => 'notWorking' %></li>
-        <li class="<%= 'active_bg' if current_page?(positions_path) || current_page?(departments_path) %>"><%= link_to "Departments", departments_path, :class => 'notWorking' %></li>
+        <li class=""><%= link_to "Serve", serve_path, :class => 'notWorking' %></li>
+        <li class=""><%= link_to "Event Check-in", checkins_path, :class => 'notWorking' %></li>
+        <% if can? :manage, :all%>
+          <li class=""><%= link_to "Stats", stats_path, :class => 'notWorking' %></li>
+          <li class="<%= 'active_bg' if current_page?(revents_path) %>"><%= link_to "Events", revents_path, :class => 'notWorking' %></li>
+          <li class="<%= 'active_bg' if current_page?(positions_path) || current_page?(departments_path) %>"><%= link_to "Departments", departments_path, :class => 'notWorking' %></li>
+        <% end %>
 
         <h5>Groups</h5>
         <h5>Files</h5>
@@ -53,10 +57,15 @@
           <%= link_to 'Momentum', root_path, :class => 'NA'  %></span>
         </div>
         <div class="topbar">
+
           <div class="login-desktop pull-right shift-down">
+
             <% if current_user %>
             <li>
               <span class="blue">
+                 <% if can? :manage, :all  %> Admin <% elsif can? :read, :all %>Staff <% else %> User <% end %>
+                 <!-- <%# if can? :create, Department  %><p>Admin</p> <%# else %>User<%# end %> -->
+
                 <%= link_to current_user.email, edit_user_registration_path %>
                 |
                 <%= link_to "Log-out", destroy_user_session_path, method: "delete" %>
@@ -67,6 +76,7 @@
               <%= link_to image_tag("settings.png", :class => "nav-icon-size"), edit_user_registration_path %>
             <% end %>
           </div>
+          <!-- Mobile Version -->
           <div class="login-mobile center">
             <% if current_user %>
             <li>
