fix bug on department filtering position

--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -54,7 +54,7 @@
           <% end %>
           <!-- Filter end -->
           <br>
-          <%= link_to 'Add Person', new_position_path(:dep_id => @department.id ) %>
+          <%= link_to 'Add Person', new_position_path(:dep_id => @department), :class => "btn-sm btn-primary" %>
         </div>
 
         <!-- Original Version -->
