--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -8,7 +8,8 @@
 
     <div class="col-sm-12"><br>
     <%= link_to "New Department", new_department_path, :class => "btn btn-sm btn-primary" %>
-    <%= link_to 'Assign Person', new_position_path, :class => "btn btn-sm btn-warning" %>
+    <!-- off for dep id error -->
+    <%#= link_to 'Assign Person', new_position_path, :class => "btn btn-sm btn-warning" %>
 
     <br><br><br>
     <% if @departments.any? %>
@@ -38,7 +39,7 @@
         <div class="people-box2">
           <% @positions.each do |position| %>
           <!-- Filters only this department -->
-          <%# if position.department.id === dep.id %>
+          <% if position.department.id === dep.id %>
           <div class="single-person">
             <span class="white">
               <%= position.part.firstname %>
@@ -59,7 +60,7 @@
               <%= link_to "X", position, :class => "", :id => "delete-test", :data => {:confirm => "Are you sure?",:method => "delete"}%>
             </span>
           </div>
-          <%# end %><!-- filter end -->
+          <% end %><!-- filter end -->
           <% end %>
 
         </div><!-- people-box2 end -->
