passed revent to position to auto select event in dropdown

--- a/app/views/revents/show.html.erb
+++ b/app/views/revents/show.html.erb
@@ -52,7 +52,7 @@
           <% end %>
           <!-- Filter end -->
           <br>
-          <%= link_to 'Add Person', new_spectator_path, :class => "btn-sm btn-primary" %>
+          <%= link_to 'Add Person', new_spectator_path(:revent_id => @revent), :class => "btn-sm btn-primary" %>
         </div>
 
     </div><!-- col end -->
