--- a/app/views/spectators/_form.html.erb
+++ b/app/views/spectators/_form.html.erb
@@ -18,7 +18,7 @@
   <label class="na">Event</label>
   <%= f.select :revent_id,
   Revent.order('name asc').all.collect { |u| [u.name, u.id] },
-               { include_blank: false },
+               { selected: @revent.id},
                { class: 'form-control selected' }
                %>
 </div>
