--- a/app/views/revents/index.html.erb
+++ b/app/views/revents/index.html.erb
@@ -1,5 +1,5 @@
 <div class="blue-bar">
-  <div class="h2-white">Revents - Index</div>
+  <div class="h2-white">Events</div>
 </div>
 
 <div class="col-sm-5">
