--- a/app/views/units/index.html.erb
+++ b/app/views/units/index.html.erb
@@ -6,7 +6,7 @@
         </div>
 
         <div class="col-sm-5">
-        <br><br>
+        <br>
         <% if can? :manage, :all%>
           <%= link_to "New Family", new_unit_path, :class => "btn btn-sm btn-primary" %>
         <%end %>
@@ -29,7 +29,7 @@
         <!-- family list -->
       </div>
       <!-- col end -->
-      <div class="col-sm-4">
+      <div class="col-sm-4"><br><br>
 
         <div class="people-box center">
           <h3>Search for Family</h3>
