--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -157,6 +157,12 @@ h6 {
   text-align: center;
   font-size: .6em;
 }
+.fancy-font{
+  color: #fff;
+  font-size: 1.2em;
+  font-family: 'Bangers', cursive;
+  letter-spacing: 1.5px;
+}
 
 .h5-grey {
   color: #999;
@@ -827,19 +833,21 @@ input[type="image"]
 }
 
 .people-box {
-  margin-top: 20px;
+  margin: 20px 0px 0px 20px;
   background-color: $midnight-dark; //#333
   padding: 10px;
   min-width: 300px;
 }
 
 .people-box-search {
+  margin: 0px 0px 0px 20px;
   background-color: $midnight-dark; //#333
   padding: 10px;
-    min-width: 300px;
+  min-width: 300px;
 }
 
 .search-results {
+    margin: 0px 0px 0px 20px;
   background-color: $midnight-dark; //#333
     min-width: 300px;
 }
@@ -992,6 +1000,10 @@ margin: 5px 2.5px;
 // }
 
 //CARD FLIP
+.card-box {
+  margin: 0px 0px 0px 20px;
+}
+
 .flip {
   -webkit-perspective: 800;
   width: 300px;
@@ -1023,15 +1035,14 @@ margin: 5px 2.5px;
 
 }
 .flip .card .front {
-  position: absolute;
-  z-index: 1;
+    position: absolute;
+    z-index: 1;
     background-color: $midnight-dark;
-    color: white;
     cursor: pointer;
 
 }
 .flip .card .back {
-  -webkit-transform: rotatey(-180deg);
+    -webkit-transform: rotatey(-180deg);
     background: blue;
     background: white;
     color: black;
