--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-sm-5">
 
-        <div class="h2-white">Department - Show</div>
+        <div class="h2-white">Department</div>
         <br><%= link_to 'Back', :back %>
         <br>
 
@@ -15,13 +15,13 @@
         <p><%= @department.description %></p>
         <br>
 
-        <%= link_to "Delete Department", department_path(@department), :class => "btn btn-sm btn-danger pull-right",:data => {:confirm => "Are you sure?",:method => "delete"}, remote: true  %>
-
         <!-- Javascript form toggle -->
         <div class="edit_family btn btn-sm btn-warning">Edit Department</div>
-        <div class="edit_f">
+        <div class="edit_f"><br>
           <%= render "form" %>
         </div>
+        <%= link_to "Delete Department", department_path(@department), :class => "btn btn-sm btn-danger",:data => {:confirm => "Are you sure?",:method => "delete"}, remote: true  %>
+
       </div>
       <!-- col end -->
       <div class="col-sm-4">
