--- a/app/views/units/show.html.erb
+++ b/app/views/units/show.html.erb
@@ -7,7 +7,9 @@
 
       <div class="col-sm-5"><br>
         <%= link_to 'Back', units_path, :class => "NA" %>
-          <%= link_to "Add Person", new_unit_part_path(@unit), :class => "btn-sm btn-primary pull-right" %>
+          <% if can? :manage, :all %>
+            <%= link_to "Add Person", new_unit_part_path(@unit), :class => "btn-sm btn-primary pull-right" %>
+          <% end %>
         <br><br>
 
     <!-- PEOPLE -->
@@ -15,11 +17,16 @@
           <% @unit.parts.each do |part| %>
 
             <span class="midnight-btn white"id="part_<%= part.id %>">
-              <%= link_to "#{part.firstname} #{part.lastname}", edit_unit_part_path(@unit, part.id), :class => "NA" %>
 
-                  <span class="midnight-X">
-              <%= link_to "X", unit_part_path(@unit, part), :class => "black", :id => "delete-test", :data => {:confirm => "Are you sure?",:method => "delete"}%>
-            </span></span>
+                <% if can? :manage, :all %>
+                  <%= link_to "#{part.firstname} #{part.lastname}", edit_unit_part_path(@unit, part.id), :class => "NA" %>
+                    <span class="midnight-X">
+                  <%= link_to "X", unit_part_path(@unit, part), :class => "black", :id => "delete-test", :data => {:confirm => "Are you sure?",:method => "delete"}%>
+                <% else %>
+                <span class="fancy-font"><%= part.firstname %> <%= part.lastname %></span>
+                <% end %>
+              </span>
+            </span>
           <% end %>
           <% else %><br><br>
         <% end %><br>
@@ -37,14 +44,14 @@
           <p><%= @unit.notes %></p>
           <br><br>
 
-          <%= link_to "Delete Family", unit_path(@unit), :class => "btn btn-sm btn-danger pull-right",:data => {:confirm => "Are you sure?",:method => "delete"}, remote: true  %>
-
-        <!-- Javascript form toggle -->
-        <div class="edit_family btn btn-sm btn-warning">Edit Family</div>
-         <div class="edit_f">
-           <%= render "form" %>
-         </div>
-
+        <% if can? :manage, :all %>
+          <!-- Javascript form toggle -->
+          <div class="edit_family btn btn-sm btn-warning">Edit Family</div>
+          <div class="edit_f">
+            <%= render "form" %>
+          </div>
+          <%= link_to "Delete Family", unit_path(@unit), :class => "btn btn-sm btn-danger",:data => {:confirm => "Are you sure?",:method => "delete"}, remote: true  %>
+         <% end %>
       </div> <!-- col end -->
 
       <div class="col-sm-4">
@@ -69,7 +76,7 @@
           <% end %>
 
         </div> <!-- people-box -->
-
+            <div class="card-box">
               <div class="flip">
                 <div class="card">
                   <div class="face front">
@@ -86,6 +93,7 @@
                   </div>
                 </div>
               </div>
+            </div>
 
       </div> <!-- col end -->
 
